// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`borderLeftStyle renders 0 1`] = `
Array [
  .c0 {
  border-left-style: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-left-style: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-left-style: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-left-style: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`borderLeftStyle renders function 1`] = `
Array [
  .c0 {
  border-left-style: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-left-style: has;
}

<div
    className="c0"
  />,
  .c0 {
  border-left-style: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-left-style: has;
}

<div
    className="c0"
  />,
]
`;

exports[`borderLeftStyle renders invalid theme path 1`] = `
Array [
  .c0 {
  border-left-style: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-left-style: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-left-style: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-left-style: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`borderLeftStyle renders negative number 1`] = `
Array [
  .c0 {
  border-left-style: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-left-style: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-left-style: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  border-left-style: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`borderLeftStyle renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    border-left-style: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-left-style: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-left-style: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-left-style: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    border-left-style: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-left-style: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-left-style: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-left-style: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-left-style: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-left-style: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-left-style: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-left-style: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-left-style: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-left-style: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-left-style: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-left-style: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderLeftStyle renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    border-left-style: July;
  }
}

@media April {
  .c0 {
    border-left-style: August;
  }
}

@media January {
  .c0 {
    border-left-style: September;
  }
}

@media April {
  .c0 {
    border-left-style: November;
  }
}

@media June {
  .c0 {
    border-left-style: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    border-left-style: July;
  }
}

@media April {
  .c0 {
    border-left-style: August;
  }
}

@media January {
  .c0 {
    border-left-style: September;
  }
}

@media April {
  .c0 {
    border-left-style: November;
  }
}

@media June {
  .c0 {
    border-left-style: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-left-style: January;
  }
}

@media April {
  .c0 {
    border-left-style: December;
  }
}

@media January {
  .c0 {
    border-left-style: April;
  }
}

@media April {
  .c0 {
    border-left-style: May;
  }
}

@media June {
  .c0 {
    border-left-style: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-left-style: January;
  }
}

@media April {
  .c0 {
    border-left-style: December;
  }
}

@media January {
  .c0 {
    border-left-style: April;
  }
}

@media April {
  .c0 {
    border-left-style: May;
  }
}

@media June {
  .c0 {
    border-left-style: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderLeftStyle renders postitive number 1`] = `
Array [
  .c0 {
  border-left-style: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-left-style: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-left-style: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  border-left-style: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`borderLeftStyle renders string 1`] = `
Array [
  .c0 {
  border-left-style: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-left-style: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-left-style: June;
}

<div
    className="c0"
  />,
  .c0 {
  border-left-style: June;
}

<div
    className="c0"
  />,
]
`;

exports[`borderLeftStyle renders valid theme path 1`] = `
Array [
  .c0 {
  border-left-style: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-left-style: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-left-style: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-left-style: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
